--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "server": "json-graphql-server db.json --port 4000"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.4",
+    "graphql": "^16.9.0",
+    "json-graphql-server": "^3.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
